--- a/src/components/Aside.css
+++ b/src/components/Aside.css
@@ -1,7 +1,7 @@
 .center{
-    padding: 100px 100px;
+    padding: 150px 100px;
     display: flex;
-    height: 80vh;
+    height: 100vh;
     box-shadow: 0px 10px 8px 1px #cccccc2c;
 }
 .center-left{
@@ -54,6 +54,9 @@
     border: none;
     margin-top: 20px;
     font-size: 16px;
+}
+.btn-agenda:hover{
+    transform: scale(1.1);
 }
 
 button.btn-agenda{
