--- a/src/components/Section.css
+++ b/src/components/Section.css
@@ -3,7 +3,7 @@
     text-align: center;
     align-items: center;
     justify-content: center;
-    padding: 150px 0;
+    padding: 60px 0;
     box-shadow: 0px 10px 8px 1px #cccccc2c;
 }
 
@@ -12,7 +12,7 @@
     display: flex;
     justify-content: center;
     width: 50%;
-    font-size: 45px;
+    font-size: 30px;
     padding: 30px 0;
 }
 
@@ -22,16 +22,21 @@
 }
 .paragrafo{
     font-family: "Raleway", sans-serif;
-    width: 45%;
+    width: 60%;
     margin: 0 auto;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     font-size: 18px;
 }
 
+.paragrafo p{
+    padding: 5px 0;
+    text-align: left;
+}
+
 .btn-button{
     cursor: pointer;
-    
     border-radius: 50px;
     background:linear-gradient(90deg,  #38b6ff ,rgb(25, 171, 255));
     color: #fff;
