--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -69,8 +69,8 @@
     cursor: pointer;
     width: 230px;
     border-radius: 50px;
-    background-color: #ffffff;
-    color: #3a5ef2;
+    background-color: #1babff;
+    color: #fff;
 }
 
 .botoes{
