--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -41,7 +41,7 @@
 }
 
 .header .nav-list li a:hover {
-    color: #000;
+    color: #ffffff;
 }
 
 .btn-login{
@@ -58,16 +58,15 @@
 }
 
 #loginWhite{
-    background-color: #fff !important;
-    color: #3a5ef2 !important;
+    background-color: #fff ;
+    color: #3a5ef2 ;
+    font-weight: bold;
 }
 
 #experimenteLogin{
-    background-color: #3a5ef2 ;
+    background-color: #1babff ;
     color: #ffffff ;
 }
-
-
 
   /* Responsive Design */
         @media (max-width: 768px) {
