--- a/src/components/Why/whyArya.css
+++ b/src/components/Why/whyArya.css
@@ -6,7 +6,7 @@
     padding: 50px 40px;
     box-shadow: 0px 10px 8px 1px #cccccc2c;
     width: 70%;
-    color: #000000;
+    color: #1c2a46;
 }
 .reason h2{
     padding: 50px;
